[package]
name = "bevy-demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_rapier2d = "0.24.0"
noisy_bevy = "0.5.0"

[[example]]
name = "quadtree"
path = "examples/quadtree.rs"

[package.metadata.example.quadtree]
name = "Quadtree Example"
description = "Demonstrates generating and rendering world from linear quadtree"
